--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.booleanull.recyclerdivider"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
