--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.booleanull.recyclerdivider">
-
-    <application>
-
-    </application>
-
-</manifest>
+<manifest package="com.booleanull.recyclerdivider"/>
